--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,13 +1,19 @@
 <h1>New Post</h1>
-
+<% if @post.errors.any? %>
+  <ul>
+    <% @post.errors.each do |error| %>
+      <li><%= error.full_message %></li>
+    <% end %>
+  </ul>
+<% end %>
 <%= form_with model: @post do |form| %>
   <div>
-  <%= form.label :title %>
-  <%= form.text_field :title %>
+    <%= form.label :title %>
+    <%= form.text_field :title %>
   </div>
   <div>
-  <%= form.label :content %>
-  <%= form.text_field :content %>
+    <%= form.label :content %>
+    <%= form.text_field :content %>
   </div>
   <%= form.submit %>
 <% end %>
