--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,12 @@
     <tr>
       <td><%= post.title %></td>
       <td><%= post.content %></td>
-      <td></td>
+      <td>
+        <%= link_to 'Show', post_path(post) %>
+        <%= link_to 'Edit', edit_post_path(post) %>
+      </td>
     </tr>
   <% end %>
 </table>
+
+<%= link_to 'New', new_post_path %>
