--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,6 +13,7 @@
       <td>
         <%= link_to 'Show', post_path(post) %>
         <%= link_to 'Edit', edit_post_path(post) %>
+        <%= button_to 'Delete', post_path(post), method: :delete %>
       </td>
     </tr>
   <% end %>
