--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,19 +1,3 @@
 <h1>New Post</h1>
-<% if @post.errors.any? %>
-  <ul>
-    <% @post.errors.each do |error| %>
-      <li><%= error.full_message %></li>
-    <% end %>
-  </ul>
-<% end %>
-<%= form_with model: @post do |form| %>
-  <div>
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-  <div>
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-  <%= form.submit %>
-<% end %>
+<%= render partial: 'form', locals: { post: @post } %>
+<%= link_to 'Index', posts_path %>
