post comments index action

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,6 +14,7 @@
         <%= link_to 'Show', post_path(post) %>
         <%= link_to 'Edit', edit_post_path(post) %>
         <%= button_to 'Delete', post_path(post), method: :delete %>
+        <%= link_to 'comments', post_comments_path(post) %>
       </td>
     </tr>
   <% end %>
