--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,6 +15,7 @@
         <%= link_to 'Edit', edit_post_path(post) %>
         <%= button_to 'Delete', post_path(post), method: :delete %>
         <%= link_to 'comments', post_comments_path(post) %>
+        <%= link_to 'new comment', new_post_comment_path(post) %>
       </td>
     </tr>
   <% end %>
