--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,17 +1,3 @@
 <h1>Title:
   <% @post.title %></h1>
-
-<%= form_with model: @comment, url: post_comments_path(@post), data: { turbo: false } do |form| %>
-  <% if @comment.errors.any? %>
-    <ul>
-      <% @comment.errors.each do |error| %>
-        <li><%= error.full_message %></li>
-      <% end %>
-    </ul>
-  <% end %>
-  <div>
-    <%= form.label :content %>
-    <%= form.text_field :content %>
-  </div>
-  <%= form.submit %>
-<% end %>
+<%= render partial: 'form', locals: {post: @post, comment: @comment, path: post_comments_path(@post)} %>
