--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,8 +16,8 @@
       <td><%= post.user.email %></td>
       <td>
         <%= link_to 'Show', post_path(post) %>
-        <%= link_to 'Edit', edit_post_path(post) %>
-        <%= button_to 'Delete', post_path(post), method: :delete %>
+        <%= link_to 'Edit', edit_post_path(post) if post.user == current_user %>
+        <%= button_to 'Delete', post_path(post), method: :delete  if post.user == current_user%>
         <%= link_to 'comments', post_comments_path(post) %>
         <%= link_to 'new comment', new_post_comment_path(post) %>
       </td>
