comment belong to user  and done the feature in controller

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @comments.each do |comment| %>
     <li>
-      <%= comment.content %>(<%= comment.created_at %>)
+      <%= comment.content %>(<%= comment.created_at %>) by <%= comment.user.email %>
       <%= link_to 'edit', edit_post_comment_path(@post, comment) %>
       <%= button_to 'delete', post_comment_path(@post, comment), method: :delete %>
     </li>
